# HATS-Native

./: .project  settings.gradle
app/: .project  build.gradle
app/src/androidTest/java/com/example/hatsnative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ft_model.ftz  home_auto_dataset.csv
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/cpp/ft/: CMakeLists.txt
app/src/main/cpp/ft/include/: Fasttext.h  args.h  autotune.h  cfasttext.h  densematrix.h  dictionary.h  loss.h  matrix.h  meter.h  model.h  productquantizer.h  quantmatrix.h  real.h  utils.h  vector.h
app/src/main/cpp/ft/src/: Fasttext.cpp  args.cpp  autotune.cpp  densematrix.cpp  dictionary.cpp  loss.cpp  matrix.cpp  meter.cpp  model.cpp  productquantizer.cpp  quantmatrix.cpp  utils.cpp  vector.cpp
app/src/main/cpp/ml/: CMakeLists.txt
app/src/main/cpp/ml/include/: ml_utils.h  nnet.h
app/src/main/cpp/ml/src/: ml_utils.cpp  nnet.cpp
app/src/main/cpp/preprocessing/: CMakeLists.txt
app/src/main/cpp/preprocessing/include/: config.h  datasethandler.h  embedding.h  pre_utils.h  preprocessing.h
app/src/main/cpp/preprocessing/src/: datasethandler.cpp  embedding.cpp  preprocessing.cpp
app/src/main/java/com/example/hatsnative/: AboutFragment.java  App.java  CommandDialog.java  DatasetFragment.java  HomeFragment.java  MainActivity.java  SettingsFragment.java  SplashActivity.java  WifiSetupFragment.java
app/src/main/java/com/example/hatsnative/constants/: Constants.java
app/src/main/java/com/example/hatsnative/fragments/: AboutFragment.java  DatasetFragment.java  HomeFragment.java  SettingsFragment.java  WifiSetupFragment.java
app/src/main/java/com/example/hatsnative/helpers/: CommandDialog.java  Constants.java  InvalidLengthException.java
app/src/main/java/com/example/hatsnative/helpers/services/: DatasetHandler.java  FasttextHandler.java  LogisticRegression.java  PreprocessingHandler.java  Utility.java
app/src/main/java/com/example/hatsnative/helpers/services/ml/: Connection.java  DNN.java  FasttextHandler.java  Net.java  Neuron.java
app/src/main/java/com/example/hatsnative/helpers/services/ml/logistic/: MultinomialLogisticRegression.java
app/src/main/java/com/example/hatsnative/helpers/services/ml/net/: Connection.java  DNN.java  Net.java  Neuron.java
app/src/main/java/com/example/hatsnative/models/: Commands.java  EKernelWeightInitializer.java  ENeuronType.java  IConnection.java  IDataColumn.java  IDataTable.java  INet.java  INeuron.java  IPreprocessing.java
app/src/main/java/com/example/hatsnative/models/data/: IDataNumberTable.java  INumberColumn.java  IShortTextData.java  IStringColumn.java
app/src/main/java/com/example/hatsnative/models/ml/: EKernelWeightInitializer.java  ENeuronType.java  IConnection.java  INet.java  INeuron.java
app/src/main/java/com/example/hatsnative/utility/: CommandDialog.java
app/src/main/res/drawable/: menu_back.xml  menu_back_state.xml  menu_item_padding.xml  splash_background.xml  splash_image_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  app_bar_main.xml  command_dialog.xml  fragment_about.xml  fragment_dataset.xml  fragment_home.xml  fragment_settings.xml  fragment_wifi_setup.xml  nav_header.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/raw/: home_auto_dataset.csv
app/src/main/res/values/: splash_image_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hatsnative/: ExampleUnitTest.java
commons-cli-1.4/: build.gradle
fasttext4j-0.2.1-SNAPSHOT/: build.gradle
fasttext4j-0.2.2/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
guava-19.0/: build.gradle
